library/general/uniqueserviceselector/samples/unique-service-selector/example_allowed.yaml
apiVersion: v1
kind: Service
metadata:
  name: gatekeeper-test-service-disallowed
  namespace: staging
spec:
  ports:
    - port: 443
  selector:
    key: other-value
