library/general/uniqueserviceselector/samples/unique-service-selector/example_inventory_disallowed.yaml
apiVersion: v1
kind: Service
metadata:
  name: gatekeeper-test-service-example
  namespace: staging
spec:
  ports:
    - port: 443
  selector:
    key: value
