library/general/uniqueserviceselector/samples/unique-service-selector/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sUniqueServiceSelector
metadata:
  name: unique-service-selector
  labels:
    owner: t3a_carbon_team
